--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -1,37 +1,142 @@
-.overview-tab-body {
+.om-tab-body {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: white;
     border-radius: 5px;
-    box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);
+    flex-direction: row;
+    }
+
+.expiration-label {
+    font-size: 11px;
+    color: #d04a43;
+    text-align: center;
+    font-weight: 600;
+    margin-left: 20px;
+    }
+
+.content-body {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 22% 88%;
+    position: relative;
+    grid-column-gap: 7px;
+    }
+
+.shift-creation-body {
+    height: 100%;
+    grid-column: 1 / 2;
+    /*box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);*/
+    background: rgba(255,255,255,1);
+    border-radius: 5px;
+    }
+
+.date-grid {
+    width: 100%;
+    height: 140px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     }
 
-.shift-creation-body{
-    height: 100%;
-    width: 40%;
-    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
-    }
-.date-grid{
+.label-div {
     width: 100%;
-    height: 70px;
+    height: 40px;
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
     }
 
-.label-div{
+.table-label-div {
     width: 100%;
-    height: 70px;
+    height: 60px;
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
+    flex-direction: column;
     }
-.tab-label{
+
+.om-tab-body .ant-table-body {
+    overflow: scroll !important;
+    /*border: 1px dashed var(--darkgreen);*/
+    border-radius: 5px;
+    background: transparent
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+
+    }
+.om-tab-body .ant-checkbox-inner{
+    background: rgba(196, 196, 196, 0.61) !important;
+    }
+.om-tab-body  * {
+    border: none !important;
+    }
+
+.guideline {
+    font-size: 11px;
+    font-weight: 600;
+    }
+
+.tab-label {
     font-size: 20px;
     color: var(--darkgreen);
     font-weight: 600;
     }
+
+.date-picker {
+    margin-top: 5px !important;
+    width: 70% !important;
+    }
+
+.driver-selection {
+    height: 100%;
+    width: 89%;
+    border-radius: 5px;
+    grid-column: 2/3;
+    display: flex;
+    /*flex-direction: column;*/
+    justify-content: center;
+    /*align-items: start;*/
+
+    background: rgba(255,255,255,1);
+    /*background: #9fefd7;*/
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+
+
+    /*grid-template-rows: 100px auto;*/
+    }
+
+.tables-wrapper {
+    grid-template-columns: 33% 33% 33%;
+    display: grid;
+    width: 92%;
+    height: 70%;
+    grid-column-gap: 8px;
+    }
+
+.am-shift-pane {
+    grid-column: 1/2;
+    /*grid-row: 2/3;*/
+    height: 100%;
+    overflow: scroll;
+    }
+
+.pm-shift-pane {
+    overflow: scroll;
+    grid-column: 2/3;
+    /*grid-row: 2/3;*/
+    height: 100%;
+    }
+
+.mn-shift-pane {
+    grid-column: 3/4;
+    /*grid-row: 2/3;*/
+    height: 100%;
+    overflow: scroll;
+    }
+
+
