--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -31,6 +31,7 @@
     /*box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);*/
     background: rgba(255,255,255,1);
     border-radius: 5px;
+    min-width: 200px;
     }
 
 .date-grid {
@@ -69,6 +70,13 @@
     /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
 
     }
+.om-tab-body .ant-table-wrapper {
+    overflow: scroll !important;
+    height: 400px!important;
+    /*border: 1px dashed var(--darkgreen);*/
+
+
+    }
 .om-tab-body .ant-checkbox-inner{
     background: rgba(196, 196, 196, 0.61) !important;
     }
@@ -94,19 +102,18 @@
 
 .driver-selection {
     height: 100%;
-    width: 89%;
+    width: 88%;
     border-radius: 5px;
     grid-column: 2/3;
     display: flex;
     /*flex-direction: column;*/
     justify-content: center;
     /*align-items: start;*/
-
     background: rgba(255,255,255,1);
     /*background: #9fefd7;*/
     /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
 
-
+    /*min-width: 350px;*/
     /*grid-template-rows: 100px auto;*/
     }
 
@@ -137,6 +144,14 @@
     /*grid-row: 2/3;*/
     height: 100%;
     overflow: scroll;
+    }
+
+.create-shift-button{
+    width:100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     }
 
 
