--- a/client/src/pages/remittances/subpages/supervisor_remittance/style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/style.css
@@ -15,25 +15,27 @@
     }
 
 .supervisor-rem-content {
-    display: flex;
+    display: inline-grid;
     padding: 10px;
     height: 83%;
     width: 100%;
-    justify-content: center;
-    align-items: center;
-    /*grid-template-columns: 60% 40%;*/
-    /*grid-template-rows: 50% 50%;*/
-    }
-
-.second-content-container {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: inline-grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: 50% 50%;
+    }
+
+.sv-transactions {
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/4;
+    height: 99%;
+    width: 99%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
-    /*background: rgba(255, 255, 255, 1);*/
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     }
 
 .sv-deployed-drivers {
@@ -89,11 +91,12 @@
     }
 
 .sv-steps-content {
+    margin-top: 16px;
     /*border: 1px dashed #e9e9e9;*/
     border-radius: 6px;
     min-height: 200px;
-    height: 100%;
-    width: 100%;
+    height: 400px;
+    width: 95%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -121,17 +124,9 @@
 
 .rem-second-content {
     display: flex;
-    width: 99%;
-    height: 99%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    grid-column: 1/2;
-    grid-row: 1/3;
-    border-radius: 5px;
-    background: rgba(255, 255, 255, 1);
-    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
-
     }
 
 .driver-list-wrapper {
@@ -200,7 +195,6 @@
 .void-list {
     overflow: scroll !important;
     }
-
 .void-item * {
     color: var(--warningred) !important;
     }
@@ -209,14 +203,12 @@
     border-bottom: none !important;
 
     }
-
-.void-empty-img {
+.void-empty-img{
     height: 50px;
     width: 70px;
     margin-top: 10px;
     }
-
-.void-empty-state {
+.void-empty-state{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -224,8 +216,7 @@
     padding: 5px;
     border: 1px dashed var(--divider);
     }
-
-.empty-label {
+.empty-label{
     margin-left: 10px;
     }
 
